@@ -104,11 +104,6 @@ the JVM arguments.
 |Creates transactions for incoming HTTP requests, supports annotated and functional endpoints.
 |1.24.0 (experimental)
 
-|Spring Webflux Webclient and WebSocketClient
-|5.2.3+
-|Creates spans for every request and subspans for received and sent stream items
-|1.25.1 (experimental)
-
 |JavaServer Faces
 |2.2.x, 2.3.x
 |If you are using JSF, transactions are named based on the requested Facelets and spans are captured for visibility into execution and
@@ -337,6 +332,11 @@ The spans are named after the schema `<method> <host>`, for example `GET elastic
 | 3.6+
 |
 | 1.25.0
+
+|Spring Webclient
+|5.2.3+
+|
+|1.27.0 (experimental)
 
 |===
 
